升级JDK和Spring版本